# TimeLink

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
api-server/: .dockerignore  Dockerfile  gunicorn.conf.py
api-server/app/: __init__.py
api-server/tests/: conftest.py
bot/: app.py
bot-server/: Dockerfile  README.md  demo.env  pyproject.toml  requirements.txt
bot-server/app/: demo.env  main.py  messages.py  selector.py
bot-server/app/commands/: __init__.py  appointment.py  command.py  default.py  factory.py  menu.py  record.py  reserve.py  selector.py  service.py
bot-server/app/lib/: fetch.py  webhook.py
bot-server/app/utils/: fetch.py  selector.py
bot-server/legacy/bot/: app.py
bot-server/legacy/bot/model/: group.py  manage.py
db/: Dockerfile
liff-server/: .env  next.config.mjs  package-lock.json  package.json
liff-server/app/: error.tsx  globals.css  layout.tsx  liff-provider.tsx  not-found.tsx  page.tsx
linebot/: app.py
linebot/model/: user.py  (+6 more)
nginx/: Dockerfile  nginx.conf  project.conf
tests/: conftest.py
timelink/: .dockerignore  Dockerfile  __init__.py  app.py  gunicorn.conf.py  requirements.txt  tailwind.config.js  wsgi.py
web/: __init__.py  gunicorn.conf.py  requirements.txt  tailwind.config.js
web_api/: .dockerignore  Dockerfile  Dockerfile.local-dev  __init__.py  gunicorn.conf.py  gunicorn.local-dev.conf.py  pyproject.toml  requirements.txt
web_app/: Dockerfile  __init__.py  auth.config.ts  auth.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
(+293 files in other folders)
